# ssh-multiconnections

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  setup.sh  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppLayout.tsx
src/components/Dialogs/: ConnectionForm.tsx  ImportExportDialog.tsx
src/components/Sidebar/: ConnectionItem.tsx  Sidebar.tsx
src/components/Terminal/: TerminalPane.tsx  TerminalTabs.tsx
src/lib/: asbru.ts  tauri-commands.ts  types.ts
src/store/: index.ts
src/types/: css.d.ts
