[package]
name = "ssh-multiconnections"
version = "0.1.0"
description = "Multi-connection SSH client"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "ssh_multiconnections_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ssh-multiconnections"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
